Fixed some code issue (FindBugs)